--- a/Happyling/Base.lproj/SignIn.storyboard
+++ b/Happyling/Base.lproj/SignIn.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="wsA-W3-8ki">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="wsA-W3-8ki">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -70,11 +70,11 @@
                                         <rect key="frame" x="0.0" y="179" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="p6N-Pa-VGK" id="dKd-u0-rYM">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5zt-rA-FzR">
-                                                    <rect key="frame" x="8" y="8" width="359" height="28"/>
+                                                    <rect key="frame" x="8" y="8" width="327" height="28"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
@@ -82,12 +82,26 @@
                                                         <outlet property="delegate" destination="UeI-PI-I3M" id="w0a-Kt-hMy"/>
                                                     </connections>
                                                 </textField>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RAq-zl-Qt3">
+                                                    <rect key="frame" x="343" y="10" width="24" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="24" id="Xjc-e8-bwu"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="24" id="nf6-Ir-gtR"/>
+                                                        <constraint firstAttribute="width" constant="24" id="wBk-NH-lFX"/>
+                                                    </constraints>
+                                                    <state key="normal" image="ic_eye_onbright_off"/>
+                                                    <connections>
+                                                        <action selector="showHidePassword:" destination="UeI-PI-I3M" eventType="touchUpInside" id="gNc-9A-OHa"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="5zt-rA-FzR" firstAttribute="leading" secondItem="dKd-u0-rYM" secondAttribute="leadingMargin" id="GNN-uG-t6q"/>
-                                                <constraint firstItem="5zt-rA-FzR" firstAttribute="centerY" secondItem="dKd-u0-rYM" secondAttribute="centerY" id="Lvm-mZ-Gqs"/>
-                                                <constraint firstItem="5zt-rA-FzR" firstAttribute="top" secondItem="dKd-u0-rYM" secondAttribute="topMargin" id="ebR-g7-Jo5"/>
-                                                <constraint firstItem="5zt-rA-FzR" firstAttribute="trailing" secondItem="dKd-u0-rYM" secondAttribute="trailingMargin" id="rqv-OA-LFR"/>
+                                                <constraint firstItem="RAq-zl-Qt3" firstAttribute="leading" secondItem="5zt-rA-FzR" secondAttribute="trailing" constant="8" symbolic="YES" id="6ky-1v-Ayd"/>
+                                                <constraint firstItem="5zt-rA-FzR" firstAttribute="leading" secondItem="dKd-u0-rYM" secondAttribute="leadingMargin" id="BYZ-Ms-uLY"/>
+                                                <constraint firstItem="RAq-zl-Qt3" firstAttribute="trailing" secondItem="dKd-u0-rYM" secondAttribute="trailingMargin" id="ZgU-ma-B2r"/>
+                                                <constraint firstItem="5zt-rA-FzR" firstAttribute="top" secondItem="dKd-u0-rYM" secondAttribute="topMargin" id="dBZ-32-Hvo"/>
+                                                <constraint firstItem="5zt-rA-FzR" firstAttribute="centerY" secondItem="dKd-u0-rYM" secondAttribute="centerY" id="hbz-ce-fkR"/>
+                                                <constraint firstItem="5zt-rA-FzR" firstAttribute="centerY" secondItem="RAq-zl-Qt3" secondAttribute="centerY" id="x2b-6L-Hsz"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -121,6 +135,7 @@
                         </connections>
                     </tableView>
                     <connections>
+                        <outlet property="showHidePasswordButton" destination="RAq-zl-Qt3" id="SpY-cp-Ma1"/>
                         <outlet property="txPassword" destination="5zt-rA-FzR" id="xBH-zH-7mm"/>
                         <outlet property="txUsername" destination="hKj-Py-DlY" id="RoQ-WK-e9d"/>
                         <segue destination="d3p-UK-jGg" kind="show" identifier="showSignUpView" id="8gW-gy-Dd6"/>
@@ -149,14 +164,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="okB-Bz-SJA">
-                                                    <rect key="frame" x="85" y="0.0" width="1" height="43.5"/>
+                                                    <rect key="frame" x="80.5" y="0.0" width="1" height="43.5"/>
                                                     <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="1" id="a50-qO-hfL"/>
                                                     </constraints>
                                                 </view>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3AE-8n-3lv">
-                                                    <rect key="frame" x="94" y="8" width="273" height="27.5"/>
+                                                    <rect key="frame" x="89.5" y="8" width="277.5" height="27.5"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -165,8 +180,8 @@
                                                     </connections>
                                                 </textField>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rFx-Pa-tKK">
-                                                    <rect key="frame" x="32" y="0.0" width="45" height="43.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="32" y="0.0" width="40.5" height="43.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -193,14 +208,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7pB-3F-7Zg">
-                                                    <rect key="frame" x="81" y="0.0" width="1" height="43.5"/>
+                                                    <rect key="frame" x="77" y="0.0" width="1" height="43.5"/>
                                                     <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="1" id="pjS-Jj-y1R"/>
                                                     </constraints>
                                                 </view>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lm0-kq-isS">
-                                                    <rect key="frame" x="90" y="8" width="277" height="27.5"/>
+                                                    <rect key="frame" x="86" y="8" width="281" height="27.5"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
@@ -209,8 +224,8 @@
                                                     </connections>
                                                 </textField>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Oe-uf-vrV">
-                                                    <rect key="frame" x="32" y="0.0" width="41" height="43.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="32" y="0.0" width="37" height="43.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -237,14 +252,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cMd-gW-95s">
-                                                    <rect key="frame" x="114" y="0.0" width="1" height="43.5"/>
+                                                    <rect key="frame" x="106" y="0.0" width="1" height="43.5"/>
                                                     <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="1" id="4Qr-Vd-nt2"/>
                                                     </constraints>
                                                 </view>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="y7g-vM-lp6">
-                                                    <rect key="frame" x="123" y="8" width="244" height="27.5"/>
+                                                    <rect key="frame" x="115" y="8" width="252" height="27.5"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
@@ -253,8 +268,8 @@
                                                     </connections>
                                                 </textField>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vPI-g3-QIw">
-                                                    <rect key="frame" x="32" y="0.0" width="74" height="43.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="32" y="0.0" width="66" height="43.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -420,6 +435,9 @@
             <point key="canvasLocation" x="407.19999999999999" y="-10.344827586206897"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ic_eye_onbright_off" width="24" height="24"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="8gW-gy-Dd6"/>
     </inferredMetricsTieBreakers>
